{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 34,
  "lineage": "35a6c6b9-6027-88d7-5f7f-a9f2b7408088",
  "resources": [
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "sampleapp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:014357505841:loadbalancer/app/sampleapp-alb-staging/67d3cfd0d6197007",
            "arn_suffix": "app/sampleapp-alb-staging/67d3cfd0d6197007",
            "dns_name": "sampleapp-alb-staging-236042155.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:014357505841:loadbalancer/app/sampleapp-alb-staging/67d3cfd0d6197007",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sampleapp-alb-staging",
            "security_groups": [
              "sg-0117144529932ba0b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09d58d61"
              },
              {
                "subnet_id": "subnet-9ab63fd6"
              }
            ],
            "subnets": [
              "subnet-09d58d61",
              "subnet-9ab63fd6"
            ],
            "tags": {
              "Environment": "staging"
            },
            "tags_all": {
              "Environment": "staging"
            },
            "vpc_id": "vpc-138fbc7b",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:014357505841:listener/app/sampleapp-alb-staging/67d3cfd0d6197007/a32267ac55215e80",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:014357505841:targetgroup/sampleapp-http-tg-staging/4ef9b2ecd52c63af",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:014357505841:listener/app/sampleapp-alb-staging/67d3cfd0d6197007/a32267ac55215e80",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:014357505841:loadbalancer/app/sampleapp-alb-staging/67d3cfd0d6197007",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_module.aws_lb.sampleapp_alb",
            "module.loadbalancer_module.aws_lb_target_group.sampleapp_http_tg",
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sampleapp_http_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:014357505841:targetgroup/sampleapp-http-tg-staging/4ef9b2ecd52c63af",
            "arn_suffix": "targetgroup/sampleapp-http-tg-staging/4ef9b2ecd52c63af",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/icons/apache_pb2.gif",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:014357505841:targetgroup/sampleapp-http-tg-staging/4ef9b2ecd52c63af",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sampleapp-http-tg-staging",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-138fbc7b"
          }
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privatesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014357505841:security-group/sg-03e14a4ee13b845d0",
            "description": "privatesg for EC2 staging",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-03e14a4ee13b845d0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0117144529932ba0b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "privatesg_staging",
            "name_prefix": "",
            "owner_id": "014357505841",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-138fbc7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014357505841:security-group/sg-0117144529932ba0b",
            "description": "publicsg for ELB staging",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0117144529932ba0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "publicsg_staging",
            "name_prefix": "",
            "owner_id": "014357505841",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-138fbc7b"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}